# go-horse

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  gohorse.c  gohorse.h  main.c  mustache.c  tdd.h  test.c
include/: Makefile.am
include/gohorse/: Makefile.am  gohorse.h  mustache.h
